--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,4 @@
 body {
-    background: #323232;
+    background-color: red; /* For browsers that do not support gradients */
+    background-image: repeating-linear-gradient(45deg,#1565c0, #5e92f3);
 }
